--- a/App/Bazaar/Base.lproj/Main.storyboard
+++ b/App/Bazaar/Base.lproj/Main.storyboard
@@ -11,23 +11,20 @@
         <!--Shop-->
         <scene sceneID="AuC-do-YVd">
             <objects>
-
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aIC-VK-8VV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="LGd-q8-fSM" customClass="ShopListViewController" customModule="Bazaar" customModuleProvider="target" sceneMemberID="viewController">
-
                     <view key="view" contentMode="scaleToFill" id="uxd-Tf-9Ge">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="755"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="wn2-0g-meS">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="811"/>
+                                <rect key="frame" x="0.0" y="44" width="428" height="797"/>
                                 <color key="backgroundColor" red="0.50947325880000005" green="0.65575029689999997" blue="0.96620899439999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ShopListTableViewCell" rowHeight="94" id="B83-cc-dFL" customClass="ShopListTableViewCell" customModule="Bazaar" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="94"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="428" height="94"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="B83-cc-dFL" id="IMD-w8-s3L">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="428" height="94"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Store Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJT-Cc-jd3">
@@ -40,10 +37,10 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bag.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="WEE-n7-jEB">
-                                                    <rect key="frame" x="10" y="9.5" width="67" height="73"/>
+                                                    <rect key="frame" x="10" y="9.9999999999999929" width="67" height="72.666666666666657"/>
                                                 </imageView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="mdU-Pk-Abj">
-                                                    <rect key="frame" x="381" y="39" width="12.5" height="16.5"/>
+                                                    <rect key="frame" x="381" y="39" width="12.666666666666686" height="16.333333333333329"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location • Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pW-Vg-DCj">
                                                     <rect key="frame" x="85" y="48" width="118" height="28"/>
@@ -79,14 +76,25 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="yVx-Ud-zSH">
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="8Ub-Lb-SYj"/>
+                                </constraints>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="f0l-UW-857"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="wn2-0g-meS" firstAttribute="trailing" secondItem="f0l-UW-857" secondAttribute="trailing" id="3JT-RL-nfk"/>
+                            <constraint firstItem="yVx-Ud-zSH" firstAttribute="leading" secondItem="wn2-0g-meS" secondAttribute="leading" id="790-Sg-bBB"/>
+                            <constraint firstItem="yVx-Ud-zSH" firstAttribute="trailing" secondItem="wn2-0g-meS" secondAttribute="trailing" id="Ob3-1l-rlm"/>
                             <constraint firstItem="wn2-0g-meS" firstAttribute="leading" secondItem="f0l-UW-857" secondAttribute="leading" id="b1E-GM-LUq"/>
                             <constraint firstItem="wn2-0g-meS" firstAttribute="trailing" secondItem="f0l-UW-857" secondAttribute="trailing" id="b66-Qu-N2p"/>
-                            <constraint firstItem="wn2-0g-meS" firstAttribute="top" secondItem="f0l-UW-857" secondAttribute="top" id="oRO-5W-vFx"/>
+                            <constraint firstItem="yVx-Ud-zSH" firstAttribute="top" secondItem="f0l-UW-857" secondAttribute="top" id="iuV-EP-xcj"/>
+                            <constraint firstItem="wn2-0g-meS" firstAttribute="top" secondItem="yVx-Ud-zSH" secondAttribute="bottom" id="kW6-OZ-4Nu"/>
                             <constraint firstAttribute="bottom" secondItem="wn2-0g-meS" secondAttribute="bottom" constant="-86" id="xkE-5O-HJR"/>
                         </constraints>
                     </view>
@@ -97,15 +105,16 @@
                         <segue destination="FXg-yk-RYC" kind="show" id="fzy-ng-cB1"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aIC-VK-8VV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1386.9565217391305" y="260.49107142857144"/>
+            <point key="canvasLocation" x="1386.448598130841" y="260.47516198704108"/>
         </scene>
         <!--Store Info View Controller-->
         <scene sceneID="QLI-Px-PvG">
             <objects>
                 <viewController storyboardIdentifier="StoreInfoPage" id="FXg-yk-RYC" customClass="StoreInfoViewController" customModule="Bazaar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0TW-lI-XsO">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="725"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="755"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Store Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nu0-qB-fvW">
@@ -166,7 +175,6 @@
                         <outlet property="websiteButton" destination="reK-95-NaA" id="Pgx-wu-xGz"/>
                     </connections>
                 </viewController>
-
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CU3-pR-WDX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2366.666666666667" y="259.82142857142856"/>
@@ -289,10 +297,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ke3-1w-Uld">
-
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="892"/>
                                 <color key="backgroundColor" red="0.50947325880000005" green="0.65575029689999997" blue="0.96620899439999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-
                                 <color key="tintColor" systemColor="systemGray6Color"/>
                                 <color key="separatorColor" systemColor="systemGray6Color"/>
                                 <prototypes>
@@ -361,10 +367,6 @@
                                                         </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </view>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="44O-l4-Qj5">
-                                                    <rect key="frame" x="70" y="20.666666666666664" width="20" height="19"/>
-                                                </imageView>
-
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mQt-YY-6FI">
                                                     <rect key="frame" x="20" y="20" width="46" height="21"/>
                                                     <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="17"/>
@@ -385,9 +387,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azR-Ec-pXx">
-
-                                                    <rect key="frame" x="270" y="20" width="124" height="19"/>
-
+                                                    <rect key="frame" x="284" y="20" width="124" height="19"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="tintColor" systemColor="systemGrayColor"/>
                                                     <state key="normal" title=" View on Website" image="network" catalog="system">
@@ -395,27 +395,7 @@
                                                     </state>
                                                 </button>
                                                 <view clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="350" placeholderIntrinsicHeight="50" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g7k-Kk-d9q" customClass="UIImageView">
-
                                                     <rect key="frame" x="20" y="71" width="388" height="50"/>
-                                                    <subviews>
-                                                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E8O-LU-bVv">
-                                                            <rect key="frame" x="0.0" y="0.0" width="388" height="50"/>
-                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="cA3-gg-bpD">
-                                                                <rect key="frame" x="0.0" y="0.0" width="388" height="50"/>
-                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                            </view>
-                                                            <blurEffect style="regular"/>
-                                                        </visualEffectView>
-                                                        <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tRc-qK-7Ci">
-                                                            <rect key="frame" x="0.0" y="0.0" width="388" height="50"/>
-                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <color key="tintColor" systemColor="labelColor"/>
-                                                            <state key="normal" title="Tap to reveal content." image="hand.raised" catalog="system">
-                                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            </state>
-                                                        </button>
-                                                    </subviews>
-
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="WNS-Iq-PM8"/>
@@ -526,7 +506,6 @@
         <!--Profile-->
         <scene sceneID="t9b-fT-U9z">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xPh-BI-LtA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController title="Profile" id="8cQ-PX-eb6" customClass="ProfileViewController" customModule="Bazaar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MPt-7N-GBL" customClass="ProfileViewController">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="838"/>
@@ -585,7 +564,6 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Friends"/>
                                 <connections>
-                                    <action selector="logoutButtonPressed" destination="MPt-7N-GBL" eventType="touchUpInside" id="OhY-51-QIg"/>
                                     <segue destination="Hlb-gh-WnZ" kind="show" id="8vA-Nx-iqp"/>
                                 </connections>
                             </button>
@@ -621,16 +599,15 @@
                             <constraint firstItem="tDf-NQ-ATD" firstAttribute="trailing" secondItem="F2J-UN-gGG" secondAttribute="trailing" id="t72-Gr-Qco"/>
                             <constraint firstItem="4oz-V8-aaf" firstAttribute="top" secondItem="YO4-h3-ni3" secondAttribute="bottom" constant="8" symbolic="YES" id="zxI-bU-vSB"/>
                         </constraints>
-                        <connections>
-                            <outlet property="emailLabel" destination="YO4-h3-ni3" id="Nxh-hF-914"/>
-                            <outlet property="nameLabel" destination="VD0-de-6ol" id="trg-ls-75W"/>
-                            <outlet property="toFriends" destination="fCP-Ii-A8G" id="B2w-yT-fXd"/>
-                            <outlet property="typeLabel" destination="VD0-de-6ol" id="4i0-1e-IFW"/>
-                        </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="" selectedImage="line.horizontal.3" catalog="system" id="Gjh-FC-eHC"/>
                     <navigationItem key="navigationItem" title="Profile" id="ueE-4I-CNc"/>
+                    <connections>
+                        <outlet property="emailLabel" destination="YO4-h3-ni3" id="ln8-eq-vJo"/>
+                        <outlet property="nameLabel" destination="VD0-de-6ol" id="myW-hQ-sT5"/>
+                    </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xPh-BI-LtA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="935" y="1288"/>
         </scene>
@@ -698,7 +675,6 @@
     <resources>
         <image name="arrowshape.turn.up.forward" catalog="system" width="128" height="106"/>
         <image name="bag.fill" catalog="system" width="128" height="128"/>
-
         <image name="chevron.right" catalog="system" width="96" height="128"/>
         <image name="hand.thumbsup" catalog="system" width="128" height="128"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
